cambios en init

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # DB_HOST=localhost
 # DB_NAME=eventos_db
 # DB_USER=postgres
-# DB_PASSWORD=tu_contraseña
+# DB_PASSWORD=perrogato32
 # DB_PORT=5432
