--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-# DB_HOST=localhost
-# DB_NAME=eventos_db
-# DB_USER=postgres
-# DB_PASSWORD=perrogato32
-# DB_PORT=5432
+DB_HOST=db
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=prueba
+DB_NAME=Javi2004
